app/client/src/scss/layout/navigation.scss
.section.section--navigation{
    position: fixed;
    bottom: 0;
    background-color: var(--ColorPrimaryDarkTrans);
    backdrop-filter: blur(10px) saturate(180%);
    width: 100%;
    max-width: 100%;
    z-index: 100;
    margin: 0;
    transform: translateY(10px);

    .nav_menu{
        display: flex;
        justify-content: space-around;
        align-items: center;
        height: 100%;
        list-style: none;
        padding: 0;
        margin: 0;

        .nav_link{
            display: flex;
            flex-direction: column;
            color: var(--ColorWhite);
            justify-content: center;
            align-items: center;
            height: 100%;
            padding: 0 20px 10px 20px;

            .menuicon{
                display: block;
                width: 30px;
                height: 30px;
                filter: brightness(0) invert(1);
                margin: 5px auto 5px auto;
            }

            p{
                text-align: center;
                display: none;
                color: var(--ColorWhite);
            }

            &.nav_link--active{
                //background-color: linear-gradient $ColorPrimaryDark;
                transform: translateY(-10px);
                border-radius: 10px 10px 0 0;
                background-color: var(--ColorPrimaryDark);
                padding-top: 5px;
                p{
                    display: block;
                    font-size: 12px;
                }
            }
        }
    }
}

